--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: TSmart
-url: https://github.com/britkat1980/tsmart
-maintainer: britkat1980
+name: TSmart BH Fork
+url: https://github.com/benholl/tsmart
+maintainer: benholl
